Added further gameplay code
Added code to reactivate the movement of the conveyor belts once the player inputted commands have finished being executed

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -164,6 +164,8 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ConveyorBelt.ConveyorBelt
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
+OpenAssetsAtExit=/Game/ParticleFX/spraySystem.spraySystem
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1036,26 +1038,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem1=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem2=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem3=/Game/PuzzleBP/Blueprints/Cylinder_Blueprint
-MRUItem4=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem5=/Game/Audio/Cylinder_Blueprint
-MRUItem6=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
-MRUItem7=/Game/Audio/Success_Beep/success_beep_Cue
-MRUItem8=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem9=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem10=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem11=/Game/PuzzleBP/Blueprints/Cube
-MRUItem12=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem14=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem15=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem16=/Game/Materials/ALANScreen
-MRUItem17=/Game/Materials/CGreen
-MRUItem18=/Game/Materials/CRed
-MRUItem19=/Game/Materials/ConveyorRed
+MRUItem0=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem1=/Game/ParticleFX/spraySystem
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem3=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem4=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem5=/Game/PuzzleBP/Blueprints/Cylinder_Blueprint
+MRUItem6=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem7=/Game/Audio/Cylinder_Blueprint
+MRUItem8=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
+MRUItem9=/Game/Audio/Success_Beep/success_beep_Cue
+MRUItem10=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem11=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem12=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem13=/Game/PuzzleBP/Blueprints/Cube
+MRUItem14=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem15=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem16=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem17=/Game/Materials/ALANScreen
+MRUItem18=/Game/Materials/CGreen
+MRUItem19=/Game/Materials/CRed
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2639,13 +2641,13 @@ StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 OutputDisplay_C=
-ALAN_C="\"Object.CanExecute\" "
+ALAN_C=
 ConveyorBelt_C=
 Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
 IORail2_IOconnectCylinders_001_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 IORail2_IOconnectBox_001_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
-BoxSpawner_C=
+BoxSpawner_C="\"Object.CanSpawn\" "
 BoxChecker_C=
 NiagaraComponent="\"Object.Tags.ComponentTags\" "
 FXSystemComponent="\"Object.Tags.ComponentTags\" "
@@ -2824,7 +2826,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2845,6 +2847,7 @@ TextRenderComponent.Text=True
 K2Node_VariableGet.Variable=True
 LevelEditorPlaySettings.PlayInEditor=True
 LevelScriptBlueprint.ClassOptions=True
+NiagaraComponent.ComponentTick=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
